.metadata/.plugins/org.eclipse.cdt.ui/task23I2cCode.build.log
18:28:29 **** Build of configuration Debug for project task23I2cCode ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/myMain.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/myMain.d" -MT"Core/Src/myMain.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/myMain.o"
../Core/Src/myMain.c: In function 'handleCommand':
../Core/Src/myMain.c:141:3: warning: statement with no effect [-Wunused-value]
  141 |   0   Lock5min = 0;
      |   ^
../Core/Src/myMain.c:141:4: error: expected ';' before 'Lock5min'
  141 |   0   Lock5min = 0;
      |    ^  ~~~~~~~~
      |    ;
make: *** [Core/Src/subdir.mk:43: Core/Src/myMain.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

18:28:29 Build Failed. 2 errors, 1 warnings. (took 536ms)

